tests/ui/parser/removed-syntax-with-1.stderr
error: expected one of `,`, `.`, `?`, `}`, or an operator, found `with`
  --> $DIR/removed-syntax-with-1.rs:8:25
   |
LL |     let b = S { foo: () with a, bar: () };
   |             -          -^^^^ expected one of `,`, `.`, `?`, `}`, or an operator
   |             |          |
   |             |          help: try adding a comma: `,`
   |             while parsing this struct

error: aborting due to 1 previous error

